--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Thinkbjy
 description: 基于thinkphp开发的简约风格的博客
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-mentions
